<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APPrende</string>
    <string name="action_settings">Opciones</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Apprende</string>
    <string name="title_activity_examen">Examen</string>
    <string name="title_section1">Pregunta #</string>
    <string name="title_activity_temas">Temas</string>
    <string name="title_activity_lateral">LateralActivity</string>
    <string name="title_activity_estadisticas">Estadisticas</string>
    <string name="points">Puntos:</string>
    <string name="date">Fecha</string>
    <string name="rate">Calificacion:</string>
    <string name="numberOfQuestions">"Preguntas: "</string>
    <string name="successes">Aciertos:</string>
    <string name="errors">Errores:</string>
    <string name="empty">Vacias:</string>
    <string name="report">Reporte</string>
    <string name="example">EJEMPLO</string>
    <string name="action_search">Buscar tema</string>
    <string name="ip_fija">192.168.0.11</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="action_guys">Guys</string>
    <string name="action_course">Course</string>
    <string name="action_registration">Registration</string>

    <string-array name="estados">
        <item>Aguascalientes</item>
        <item>Durango</item>
        <item>Monterrey</item>
        <item>Distrito federal</item>
        <item>Zacatecas</item>
        <item>Chiapas</item>
        <item>Veracruz</item>
        <item>Guadalajara</item>
    </string-array>
    <string-array name="universidades">
        <item>Universidad autonoma de aguascalientes</item>
        <item>Universidad Nacional Autonoma de Mexico</item>
        <item>Instituto tecnologico de monterrey</item>
        <item>Instituto tecnologico de aguascalientes</item>
    </string-array>

    <string name="title_activity_presentacion">PresentacionActivity</string>
    <string name="miniproyectos">MINIPROYECTOS UAA 2013</string>
    <string name="title_activity_dificultad">DificultadActivity</string>
    <string name="title_activity_materias">MateriasActivity</string>
    <string name="refactory">Refactory</string>
    <string name="AppName">Apprende </string>
    <string name="Pandamobile">Pandamobile</string>
    <string name="detail">Detail</string>
    <string name="Terminate">Terminar</string>
    <string name="cbedoy">Carlos Alfredo Cervantes Bedoy</string>
    <string name="dave">David Angel Gutierrez Duron</string>
    <string name="tito">Efrain Sanchez Vazquez</string>
    <string name="title_activity_splash_view"></string>
    <string name="title_activity_login_view">Login</string>
    <string name="title_activity_profile_view">User profile</string>
    <string name="title_activity_theme_view">Theme selecction</string>
    <string name="title_activity_questionary_view">Exam</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_feed_view">Feeds</string>
    <string name="title_activity_registration_view">Registration</string>
    <string name="success">Success</string>
    <string name="loading">Loading</string>
    <string name="copyright">Apprende Mobile\nCopyright © Panda Studios</string>
    <string name="hard_level"><![CDATA[<b>Hard</b>\nThis test contains 20 random questions about the selected topic.]]></string>

    <string name="very_easy">Very easy</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very hard</string>
</resources>
